grid.scss
/*
 * My Grid
 * A semantic, simple and responsive grid.
 * https://github.com/willrax/grid
 */

*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.row {
  margin: 0 0 20px 0;

  &:after {
    content: "";
    display: table;
    clear: both;
  }
}

.col {
  float: left;
  padding-right: 20px;

  .row &:last-of-type {
    padding-right: 0;
  }
}

// The Grid

.whole {
  width: 100%;
}

.half {
  width: 50%;
}

.one-third {
  width: 33.33%
}

.two-thirds {
  width: 66.66%;
}

.one-sixth {
  width: 16.66%;
}

.four-sixths {
  width: 66.66%;
}

// Responsiveness

@media screen and (max-width: 568px) {
  .row {
    .col {
      width: 100%;
      padding-left: 20px;
      padding-right: 20px;
    }
  }
}

